--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px;
 }
 
 /* navigation links */
@@ -79,6 +80,7 @@ h2 {
     width: 100%;
     background: url(../images/hero-image.webp) no-repeat center center;
 
+
     /* animates zomm effect on loading page */
     animation-name: hero-zoom;
     animation-duration: 5s;
@@ -112,4 +114,30 @@ h2 {
     right: 150px;
 
     position: absolute;
+}
+
+/* club ethos */
+
+#club-ethos {
+    height: 600px;   
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    background-color: blue;
+}
+
+#right-about {
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+    background-color: silver;
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    background-color: green;
 }
