--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,3 +283,14 @@ footer {
         display: none;
     }
 }
+
+/* for medium screen sizes from 950px down */
+
+@media screen and (max-width: 950px) {
+    #menu {
+        clear: left;
+        float: left;
+        margin: 0 0 20px 30px;
+        line-height: 25px;
+    }
+}
