--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,8 @@ hr {
 #circle-container {
     width: 300px;
     height: 300px;
-    border-radius: 50%;
     padding: 30px;
+    border-radius: 50%;
     border-style: solid;
     border-color: #ccc;
     margin: 0 auto;
@@ -279,6 +279,13 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
@@ -320,4 +327,5 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
+   
 }
