--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,7 @@ footer {
     hr {
         display: none;
     }
+
 }
 
 /* for medium screen sizes from 950px down */
@@ -327,5 +328,16 @@ footer {
         text-align: center;
         padding: 0 20px;
     }
-   
+    
+    #photos {
+        column-count: 3;
+    }
+}
+
+/* for smaller screen sizes 800px and down */
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
 }
